--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@
 .h3{
     font-family: Arial;
     font-size: 1.5em;
-    color: #d46a6a;
-    text-align: center;
+    color: #800000;
+    text-align: left;
     margin-bottom: 2vh;
 }
 .h5{
