--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@
     color: #ffb347;
 }
 
+.h2{
+    font-family: Arial;
+    font-size: 1.75em;
+    font-weight: bold;
+    color: #800000;
+    text-align: left;
+    margin-top: 2.5vh;
+    margin-bottom: 2vh;
+}
 
 .h3{
     font-family: Arial;
